# rust-clap-wrapper-thick

./: .gitignore  .gitmodules  Cargo.toml  README.md  cbindgen.toml
.cargo/: config.toml
clap-wrapper-cmake/: .gitignore  CMakeLists.txt  rust_plugin_1_clap_entry.cpp  rust_plugin_1_clap_entry.h
nih-xtask/: Cargo.toml
